# esp32-homebridge

./: .gitignore  Processing lvgl-esp32-4848S040CIY1 (boar.sh  README.MD  platformio.ini
SquareLine/: esp32-homebridge.sll  esp32-homebridge.spj
SquareLine/JC3248W535/: JC3248W535CIY.sll  JC3248W535CIY.spj  Themes.slt
SquareLine/components/: hkButtonSwitch.ecomp
SquareLine/ui/: filelist.txt  ui_events.h  ui_helpers.c  ui_helpers.h
boards/: JC3248W535CIY.json
docs/: homebridge-control-panel.key
include/: lv_conf.h
lib/controller/: controller.cpp  controller.h
lib/display/: Arduino_gfx.cpp  LightOff.c  display.c  display.cpp  display.h  fan_off.c  flatten.c  homebridge_color_round.c  lightbulb.c  ui_img_lightoff_png.c
lib/gfxDisplay/: Arduino_gfx.cpp  Arduino_gfx.h
lib/hap-client/: hap-client.cpp  hap-client.h  hapCache.cpp  hapCache.h  hapDevice.cpp  hapDevice.h  hapDevices.cpp  hapDevices.h  homekitDeviceController.cpp  homekitDeviceController.h  ui-client.cpp  ui-client.h
lib/hapClient/: HTTPMessageParser.cpp  hapCache.cpp  hapClient.cpp  hapClient.h  homekitDeviceController.cpp  homekitDeviceController.h
lib/restartReason/: restartReason.cpp  restartReason.h
lib/spaWebServer/: spaWebServer.cpp
lib/sqlUI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
lib/ui-client/: ui-client.cpp  ui-client.h
lib/wifiModule/: wifiModule.cpp
src/: config.h  main.cpp  main.h  main.ino
src/ui/: CMakeLists.txt  ui.c  ui.h
src/ui/components/: ui_comp.c  ui_comp.h
(+19 files in other folders)
