SET(SOURCES components/ui_comp_hkbuttonswitch.c
    components/ui_comp.c
    screens/ui_Screen1.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_lightoff_png.c
    fonts/ui_font_Montserrat_Bold_14.c
    fonts/ui_font_Montserrat_Bold_16.c
    fonts/ui_font_Montserrat_Bold_18.c
    fonts/ui_font_Open_Sans_12.c
    fonts/ui_font_Open_Sans_14.c
    fonts/ui_font_Open_Sans_16.c
    fonts/ui_font_Open_Sans_18.c
    fonts/ui_font_Open_Sans_20.c
    fonts/ui_font_Open_Sans_24.c
    fonts/ui_font_Open_Sans_26.c
    fonts/ui_font_Open_Sans_Bold_12.c
    fonts/ui_font_Open_Sans_Bold_14.c
    fonts/ui_font_Open_Sans_Bold_16.c
    fonts/ui_font_Open_Sans_Bold_18.c
    fonts/ui_font_Open_Sans_Bold_20.c
    fonts/ui_font_Open_Sans_Bold_24.c
    fonts/ui_font_Open_Sans_Bold_26.c)

add_library(ui ${SOURCES})
